--- a/public/css/app.css
+++ b/public/css/app.css
@@ -404,3 +404,322 @@ time {
   /* Timeline */
   
   /* ==================== */
+
+
+  .tm-sidebar {
+    box-sizing: border-box;
+    width: 200px !important;
+    overflow: auto;
+}
+.tm-menu {
+    margin-bottom: 50px;
+}
+.tm-bottom {
+    border-top: 1px solid rgba(255,255,255,0.07);
+    padding: 15px 0;
+    background-color: #222222;
+    position: fixed;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 200px!important;
+}
+.uk-navbar-container:not(.uk-navbar-transparent) {
+    background: #1e87f0;
+}
+.uk-active .uk-icon {
+    color: #1e87f0;
+}
+.tm-item {
+    border-radius: 10px;
+}
+.tm-image {
+    opacity: 0.3;
+    border-radius: 10px;
+    min-height: 130px;
+}
+@media (max-width: 767px) {
+.tm-image {
+    min-height: 100px;
+}
+}
+.tm-chart {
+    position: relative; 
+    height: 270px; 
+    margin: 0 auto;
+}
+#uk-counter-d .counter-value {
+    animation: uk-counter-d 3000ms;
+}
+@keyframes uk-counter-d {
+from {
+    stroke-dashoffset: 753.982236862;
+}
+to {
+    stroke-dashoffset: 0;
+}
+}
+#uk-counter-user .counter-value {
+    animation: uk-counter-user 3000ms;
+}
+@keyframes uk-counter-user {
+from {
+    stroke-dashoffset: 753.982236862;
+}
+to {
+    stroke-dashoffset: 0;
+}
+}
+.tm-badge {
+    margin-top: -30px;
+    margin-right: -30px;
+    position: absolute;
+}
+.tm-badge-m {
+    margin-top: -15px;
+    margin-left: 15px;
+    position: absolute;
+}
+.comment-badge {
+    margin-top: -30px;
+    margin-left: -15px;
+}
+.tm-ripple {
+    display: inline-block;
+    position: absolute;
+    width: 65px;
+    height: 65px;
+}
+.tm-ripple div {
+    position: absolute;
+    border: 3px solid #fff;
+    opacity: 0.3;
+    border-radius: 50%;
+    animation: tm-ripple 2s cubic-bezier(0, 0.2, 0.8, 1) infinite;
+}
+.tm-ripple div:nth-child(2) {
+    animation-delay: -1s;
+}
+@keyframes tm-ripple {
+    0% {
+        top: 19px;
+        left: 19px;
+        width: 20px;
+        height: 20px;
+        opacity: 0.3;
+    }
+    100% {
+        top: 0;
+        left: 0;
+        width: 60px;
+        height: 60px;
+        opacity: 0;
+    }
+}
+.tm-cat-s {
+    display: none;
+}
+
+.uk-switch {
+  position: relative;
+  display: inline-block;
+  height: 19px;
+  width: 38px;
+}
+.uk-switch input {
+  display:none;
+}
+.uk-switch-slider {
+  background-color: rgba(0,0,0,0.22);
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  border-radius: 500px;
+  bottom: 0;
+  cursor: pointer;
+  transition-property: background-color;
+    transition-duration: .2s;
+  box-shadow: inset 0 0 2px rgba(0,0,0,0.07);
+}
+.uk-switch-slider:before {
+  content: '';
+  background-color: #fff;
+  position: absolute;
+  width: 15px;
+  height: 15px;
+  left: 2px;
+  bottom: 2px;
+  border-radius: 50%;
+  transition-property: transform, box-shadow;
+    transition-duration: .2s;
+}
+input:checked + .uk-switch-slider {
+  background-color: #39f !important;
+}
+input:checked + .uk-switch-slider:before {
+  transform: translateX(19px);
+}
+input:checked + .uk-switch-slider.uk-switch-s {
+  background-color: #32d296 !important;
+}
+input:checked + .uk-switch-slider.uk-switch-d {
+  background-color: #f0506e !important;
+}
+.uk-border-rounded {
+    border-radius: 10px;
+}
+.uk-notification-message {
+    border-radius: 10px;
+    box-shadow: 0 17px 25px -8px rgba(71,71,85,0.6);
+}
+.uk-modal-dialog {
+    border-radius: 15px;
+}
+.uk-modal-header {
+    background: transparent;
+    padding: 15px 20px;
+}
+.uk-modal-body {
+    padding: 20px;
+}
+.uk-modal-footer {
+    background: transparent;
+    padding: 15px 20px;
+}
+.uk-tile {
+    border-radius: 15px;
+}
+td label {
+    cursor: pointer;
+}
+.report-box {
+    position: relative;
+}
+.report-box:before {
+    content: "";
+    width: 90%;
+    position: absolute;
+    left: 0px;
+    right: 0px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 0.75rem;
+    height: 100%;
+    border-radius: 10px;
+    background-color: rgba(255,255,255,0.7);
+    box-shadow: 0 5px 15px rgb(0 0 0 / 8%);
+}
+
+
+.profile_wrapper{
+  /* position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  width: 450px;*/
+  display: flex;
+    margin: auto 0;
+    width: 60%;
+  box-shadow: 0 1px 20px 0 rgba(69,90,100,.08); 
+}
+
+.profile_wrapper .left{
+  width: 35%;
+  background: linear-gradient(to right,#01a9ac,#01dbdf);
+  padding: 30px 25px;
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+  text-align: center;
+  color: #fff;
+}
+
+.profile_wrapper .left img{
+  border-radius: 5px;
+  margin-bottom: 10px;
+}
+
+.profile_wrapper .left h4{
+  margin-bottom: 10px;
+  margin-top: 10px;
+}
+
+.profile_wrapper .left p{
+  font-size: 12px;
+}
+
+.profile_wrapper .right{
+  width: 65%;
+  background: #fff;
+  padding: 30px 25px;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+}
+
+.profile_wrapper .right .info,
+.profile_wrapper .right .projects{
+  margin-bottom: 25px;
+}
+
+.profile_wrapper .right .info h3,
+.profile_wrapper .right .projects h3{
+    margin-bottom: 15px;
+    padding-bottom: 5px;
+    border-bottom: 1px solid #e0e0e0;
+    color: #353c4e;
+  text-transform: uppercase;
+  letter-spacing: 5px;
+}
+
+.profile_wrapper .right .info_data,
+.profile_wrapper .right .projects_data{
+  display: flex;
+  justify-content: space-between;
+}
+
+.profile_wrapper .right .info_data .data,
+.profile_wrapper .right .projects_data .data{
+  width: 45%;
+}
+
+.profile_wrapper .right .info_data .data h4,
+.profile_wrapper .right .projects_data .data h4{
+    color: #353c4e;
+    margin-bottom: 5px;
+}
+
+.profile_wrapper .right .info_data .data p,
+.profile_wrapper .right .projects_data .data p{
+  font-size: 13px;
+  margin-bottom: 10px;
+  color: #919aa3;
+}
+
+.profile_wrapper .social_media ul{
+  display: flex;
+}
+
+.profile_wrapper .social_media ul li{
+  width: 45px;
+  height: 45px;
+  background: linear-gradient(to right,#01a9ac,#01dbdf);
+  margin-right: 10px;
+  border-radius: 5px;
+  text-align: center;
+  line-height: 45px;
+}
+
+.profile_wrapper .social_media ul li a{
+  color :#fff;
+  display: block;
+  font-size: 18px;
+}
+
+.hv-100 {
+  height: 85vh;
+} 
+
+.custom-dflex {
+  display: flex;
+    justify-content: center;
+}
